# dao-proposal-group-6

./: .gitignore  README.md  ZKP.py
dao/: Dockerfile  pyproject.toml
dao/dao/: asgi.py  settings.py  urls.py  wsgi.py
dao/polls/: urls.py  views.py
dao/staticfiles/css/: base.css
dao/staticfiles/js/: polls.js
dao/templates/: _base.html  home.html  new-poll.html  results.html  vote.html
prototipo zkp/: OVN contratto.py  ZKP.py  partecipanti.py
smart_contract/: contract.py  contract_ops.py  utils.py  vote_approval.teal  vote_clear_state.teal
