[tool.poetry]
name = "dao"
version = "0.1.0"
description = ""
authors = ["biancofla <flavio.biancospino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
daphne = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
